--- a/data/styles.css
+++ b/data/styles.css
@@ -1,6 +1,21 @@
-.game-board {
-    width: 300px;
-    height: 300px;
-    background-color: blueviolet;
-    color: blue;
+#board {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    grid-template-rows: repeat(3, 100px);
+    gap: 5px;
+}
+
+#board div {
+    width: 100px;
+    height: 100px;
+    border: 1px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+#board div:hover {
+    background-color: #eee;
 }
