--- a/data/styles.css
+++ b/data/styles.css
@@ -20,13 +20,14 @@ body {
     align-items: center;
     width: 100px;
     height: 100px;
-    font-size: 24px;
+    font-size: 48px;
     font-weight: bold;
     background-color: #3498db;
     color: #fff;
     cursor: pointer;
     border: 2px solid #2980b9;
     transition: background-color 0.3s;
+    border-radius: 20px;
 }
 
 .square:hover {
@@ -40,9 +41,9 @@ body {
     transform: translate(-50%, -50%);
     padding: 20px;
     background-color: #b1551f;
-    color: #fff;
+    color: #2b2b2b;
     font-size: 18px;
     font-weight: bold;
-    border-radius: 5px;
+    border-radius: 20px;
     display: none;
 }
